[project]
name = "vgaetf"
version = "0.1.0"
requires-python = "==3.8.*"
dependencies = [
    "torch==2.1.*",
    "dgl",
    "scikit-learn>=1.3.2",
    "setuptools>=66, <67",
    "torchdata==0.7.*",
    "pyyaml>=6.0.3",
    "pydantic>=2.10.6",
    "polars>=1.8.2",
]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
dgl = [
  { url = "https://data.dgl.ai/wheels/torch-2.1/dgl-2.2.0-cp38-cp38-manylinux1_x86_64.whl" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
